# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.6
#

2005-02-16 14:31:42 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-62

    Summary:
      get ready to release 0.6.4
    Revision:
      itools--main--0.6--patch-62


    modified files:
     CHANGES.txt Changelog setup.py


2005-02-16 14:24:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-61

    Summary:
      fix paths for Windows
    Revision:
      itools--main--0.6--patch-61

    Internally we use always a forward slash, the "os.path" methods
    ("listdir", "exists", etc.) understand them even in Windows.
    
    The only problem is the input, if the API is feed with backslashes
    (like the path produced by "os.getcwd") it may not work.

    modified files:
     Changelog __init__.py resources/__init__.py


2005-02-14 16:58:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-60

    Summary:
      handlers, now the encoding default is UTF-8 (for "to_unicode")
    Revision:
      itools--main--0.6--patch-60

    The method "to_unicode" of text handlers accepts the parameter "encoding",
    before its default value was "None", now it is UTF-8.

    modified files:
     Changelog doc/files.tex doc/files2.tex handlers/Text.py
     xml/HTML.py xml/XML.py


2005-02-14 16:44:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-59

    Summary:
      xml, fix XHTML and HTML serialization, correctly set the encoding
    Revision:
      itools--main--0.6--patch-59

    Now the encoding specified within the head is correctly set on serialization.

    modified files:
     Changelog xml/HTML.py xml/XHTML.py xml/XML.py


2005-02-10 10:21:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-58

    Summary:
      update the changelog
    Revision:
      itools--main--0.6--patch-58

    Finally understood how it works. The file ".arch_ids/Changelog.id" is
    
      automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.6
    